# ACO-Cellnopt

./: CMakeLists.txt  Makefile  README.md  parallel_job.sh
R/: export_model_to_hdf5.R
aco/: aco.hpp  ants.cpp  cellnopt_aco.cpp  parallel.cpp  utilities_aco.cpp
benchmark/ExtLiverBMC2012/: insilico_model_data.h5
benchmark/ExtLiverPCB/: insilico_model_data.h5
benchmark/LiverDREAM/: insilico_model_data.h5
benchmark/toymodel/: calibrate_toymodel_R.R  export_toymodel_to_hdf5.R  toymodel_calibration_R.txt
src/: compute_score_t1.hpp  data.hpp  get_fit.hpp  simulator.hpp  single_bit_string.cpp  vector_funcs.hpp
tests/: test_bitstrings.csv  test_compute_score_t1.cpp  test_score.csv
